--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "zod": "^3.24.2"
   }
 }
