--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
